discussion/kv_engine/161061/161061_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48038: Rename ExpelResult to ReleaseResult

.. and rename also the struct members to more generic names. That is in
preparation for re-using the struct as return type of
CM::removeClosedUnrefCheckpoints.

Change-Id: Ie744f6e99924ae16ecf68692eea1e6936f18f3ac

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-14 06:46:01.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-09-14 06:46:43.000000000
Message: 
Patch Set 5: Verified+1

Comment only change since latest CV+1 patchset
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 06:49:01.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33909/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
fatal error: "gmock/gmock.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39805/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\build\tlm\deps\folly.exploded\include\folly/portability/GTest.h(32): fatal error C1083: Cannot open include file: "gtest/gtest.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39805/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12333/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12333/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12333/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1974/ : FAILURE

Compile error at [2021-09-14T06:46:49.686Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1974/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13950/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14190/ : FAILURE

Compile error at [2021-09-14T06:48:10.094Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14683/ : FAILURE

Compile error at [2021-09-14T06:47:30.007Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14683/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22183/ : FAILURE

Compile error at [2021-09-14T06:47:23.636Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22183/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13090/ : FAILURE

Compile error at [2021-09-14T06:46:47.672Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13090/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1992/ : FAILURE

Compile error at [2021-09-14T06:48:38.345Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1992/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11123/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
